tests/ui/type_mismatch.gopp
package main
func add(a int, b int) int {
    return a + b
}
func main() {
    println(add(1, "two")) //~ ERROR expected int, found string
    var x string = 5 //~ ERROR expected string, found int
    println(x)
}
